<resources>
    <string name="app_name">物流项目</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_driver">司机版</string>
    <string name="tv_switch">点击切换</string>
    <string name="tv_shipper">货主版</string>
    <string name="tv_ownner">车主</string>
    <string name="shipper">货主</string>
    <string name="tv_level">4.9</string>
    <string name="tv_name">游客</string>
    <string name="tv_getorder">承接运单：111</string>
    <string name="tv_sendcar">发布车源：111</string>
    <string name="myorder">我的运单</string>
    <string name="mymoney">我的钱包</string>
    <string name="mycertification">我的认证</string>
    <string name="tv_certification">（未认证）</string>
    <string name="tv_clinchdeal">待成交(0)</string>
    <string name="tv_alclinchdeal">已成交(0)</string>
    <string name="tv_receivegoods">待收货(0)</string>
    <string name="tv_alreadyfinish">已完成(0)</string>
    <string name="tv_balance">账户余额</string>
    <string name="tv_topup">充值、提现</string>
    <string name="tv_set">设置</string>
    <string name="modify_login_password">修改登录密码</string>
    <string name="modify_pay_password">修改支付密码</string>
    <string name="open_voice_broadcast_remind">开启语音播报提醒</string>
    <string name="voice_broadcast_time">语音播放时间</string>
    <string name="tv_help">帮助中心</string>
    <string name="help">帮助</string>
    <string name="tv_question">其他问题咨询客服微信“123456789”</string>
    <string name="version_update">版本更新</string>
    <string name="version_search">正在检查版本更新...</string>
    <string name="version_newest">当前版本已是最新版!</string>
    <string name="version_new">有新版本!</string>
    <string name="about">关于</string>
    <string name="exit">退出此账号</string>
    <string name="driver_certification">司机认证</string>
    <string name="information_certification">角色认证可提升信用度</string>
    <string name="your_name">姓名</string>
    <string name="id_number">身份证号</string>
    <string name="license_plate_number">车牌号</string>
    <string name="models">车型</string>
    <string name="load">载重</string>
    <string name="head_portrait">头像</string>
    <string name="identity_certification">身份证照</string>
    <string name="drive_license">驾驶证照</string>
    <string name="driving_license">行驶证照</string>
    <string name="headstock_according">车头照</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="submit">提交</string>
    <string name="replace">替换</string>
    <string name="saves">保存</string>
    <string name="company_name">公司名称</string>
    <string name="your_position">职位</string>
    <string name="company_address">公司地址</string>
    <string name="business_card">名片</string>
    <string name="door_head">门头照</string>
    <string name="business_license">营业执照</string>
    <string name="shipper_certification">货主认证</string>
    <string name="login_username">请输入用户名</string>
    <string name="login_password">请输入密码</string>
    <string name="btn_login">登陆</string>
    <string name="registered">立即注册</string>
    <string name="maximum_of_pwd_num">输入6~30位字母或数字</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="forget_password1">忘记密码？</string>
    <string name="forget_password2">忘记密码</string>
    <string name="caroptions">车源</string>
    <string name="supply_goods">货源</string>
    <string name="show_supply_goods">发布货源</string>
    <string name="show_caroptions">发布车源</string>
    <string name="show_route">路线</string>
    <string name="show_me">我的</string>
    <string name="restart_getcode">重新获取</string>
    <string name="please_waitting">请稍等..</string>
    <string name="phone_not_empty">手机号不能为空</string>
    <string name="pwds_not_empty">密码不能为空</string>
    <string name="pwds_not_same">两次密码不一致，请重新输入</string>
    <string name="rule_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="msg_send_success">短信已发送</string>
    <string name="name_empity">用户名为空</string>
    <string name="name_already_save">手机号码已注册</string>
    <string name="phone_error">手机号格式错误</string>
    <string name="pwed_empity">密码为空</string>
    <string name="pwed_error">密码应在6-30位之间</string>
    <string name="send_code_error">验证码错误</string>
    <string name="send_code_start">短信已发送</string>
    <string name="send_cord_url_error">短信接口错误</string>
    <string name="send_code_receiver_error">短信码获取失败</string>
    <string name="phone_not_registered">用户名未注册</string>
    <string name="pwds_error">密码错误</string>
    <string name="shipper_authentication_failed">货主认证失败</string>
    <string name="opptions_authentication_failed">车源认证失败</string>
    <string name="user_details_obtain_failed">用户详情获取失败</string>
    <string name="illegal_request">非法请求</string>
    <string name="login_timeout">登录超时</string>
    <string name="another_place_login">异地登录</string>
    <string name="exit_failed">退出失败</string>
    <string name="goods_options_information_addfailed">货源OR车源信息添加失败</string>
    <string name="goods_options_list_obtain_failed">货源OR车源列表获取失败</string>
    <string name="goods_options_idempity">货源OR车源id不可为空</string>
    <string name="goods_options_details_obbtain_failed">货源OR车源详情获取失败</string>
    <string name="networ_anomalies">网络异常，请检查网络</string>
    <string name="register_success">注册成功</string>
    <string name="registering">正在注册...</string>
    <string name="login_success">登录成功</string>
    <string name="determine">确定</string>
    <string name="dismiss">取消</string>
    <string name="enter_new_pwds">请输入新密码</string>
    <string name="enter_new_pwds_again">请确认密码</string>
    <string name="get_send_code">获取验证码</string>
    <string name="enter_phone">请输入手机号码</string>
    <string name="pwds_reset_success">密码设置成功</string>
    <string name="tv_context">内容</string>
    <string name="tv_version_owner">当前版本：司机版</string>
    <string name="tv_version_shipper">当前版本：货主版</string>
    <string name="please_enter_name">请输入姓名</string>
    <string name="please_enter_id_card">请输入身份证号</string>
    <string name="please_enter_company_name">请输入公司名称</string>
    <string name="please_enter_company_address">请输入公司地址</string>
    <string name="please_enter_position">请输入您的职位</string>
    <string name="please_enter_car_wgt">请输入载重</string>
    <string name="please_enter_car_nub">请输入车牌号</string>
    <string name="name_not_empty">姓名不能为空</string>
    <string name="idCard_not_empty">身份证号不能为空</string>
    <string name="car_wgt_not_empty">载重不能为空</string>
    <string name="company_name_not_empty">公司名称不能为空</string>
    <string name="company_address_not_empty">公司地址不能为空</string>
    <string name="position_not_empty">职位不能为空</string>
    <string name="up_load_success">资料上传成功</string>
    <string name="address">地址</string>
    <string name="near">附近</string>
    <string name="start_area">出发地</string>
    <string name="destination">目的地</string>
    <string name="Loading_car_time">装车时间</string>
    <string name="more">更多</string>
    <string name="goods_detail">货源详情</string>
    <string name="cars_detail">车源详情</string>
    <string name="option_shipper">发布车源</string>
    <string name="please_sel_start_area">请选择出发地</string>
    <string name="please_sel_end_area">请选择目的地</string>
    <string name="car_style">车辆类型</string>
    <string name="please_sel_car_style">请选择车辆类型</string>
    <string name="get_wgt">承运重量</string>
    <string name="please_sel_get_wgt">请选择承受重量</string>
    <string name="tons">吨</string>
    <string name="carrier_volume">承运体积</string>
    <string name="please_enter_carrier_volume">请输入承受体积</string>
    <string name="volume">方</string>
    <string name="please_sel_time">请选择时间</string>
    <string name="start_car_time">发车时间</string>
    <string name="note">备注</string>
    <string name="please_enter_note">请输入备注</string>
    <string name="release">发布</string>
    <string name="release_success">发布成功</string>
    <string name="wrong_change_time">时间戳转义错误</string>
    <string name="need_get_goods">需要取货</string>
    <string name="need_send_goods">需要送货</string>
    <string name="goods_style">货物类型</string>
    <string name="please_sel_goods_style">请选择货物类型</string>
    <string name="goods_name">货物名称</string>
    <string name="please_enter_goods_name">请输入货物名称</string>
    <string name="goods_wgt">货物重量</string>
    <string name="please_enter_goods_wgt">请输入货物重量</string>
    <string name="goods_volume">货物体积</string>
    <string name="please_enter_goods_volume">请输入货物体积</string>
    <string name="cars_needs">车辆需求</string>
    <string name="please_sel_cars_needs">请选择车辆需求</string>
    <string name="loading_car_time">装车时间</string>
    <string name="please_enter_loading_car_time">请输入装车时间</string>
    <string name="indicative_price">意向价格</string>
    <string name="please_enter_indicative_price">请输入意向价格</string>
    <string name="yuan_car">元/车</string>
    <string name="receiver_phone">收货电话</string>
    <string name="please_enter_receiver_phone">请输入收货电话</string>
    <string name="message_note">备注信息</string>
    <string name="please_enter_message_note">请输入备注信息</string>
    <string name="contact">只允许实名车主联系我</string>
    <string name="add_route">增加订阅路线</string>
    <string name="order_details">订单详情</string>
    <string name="all">全部</string>
    <string name="finish">已完成</string>
    <string name="unfinish">未完成</string>
    <string name="my_orders">我的运单</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>



</resources>
