<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ftoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/title_bg"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/sel_backbg"
                android:src="@drawable/ic_back" />

            <View android:id="@+id/view"
                android:layout_width="@dimen/px02"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/px15"
                android:layout_toRightOf="@+id/img_back"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/px60"
                android:background="@color/white" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/px15"
                android:text="editext"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/view"
                android:textColor="@color/white"
                android:textSize="@dimen/px35" />


            <TextView android:id="@+id/tv_save"
                android:layout_width="@dimen/px120"
                android:layout_height="match_parent"
                android:text="@string/saves"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/px20"
                android:background="@drawable/sel_backbg"
                android:textColor="@color/white"
                android:textSize="@dimen/px35"/>

        </com.zhy.autolayout.AutoRelativeLayout>
    </android.support.v7.widget.Toolbar>


    <EditText android:id="@+id/edt_driver_name"
        style="@style/Editext_style"
        android:hint="@string/please_enter_name"/>

    <EditText android:id="@+id/edt_driver_idcard"
        style="@style/Editext_style"
        android:digits="1234567890Xx"
        android:hint="@string/please_enter_id_card"/>

    <EditText android:id="@+id/edt_car_wgt"
        style="@style/Editext_style"
        android:digits="1234567890."
        android:hint="@string/please_enter_car_wgt"/>

    <EditText android:id="@+id/edt_car_nub"
        style="@style/Editext_style"
        android:digits="1234567890."
        android:hint="@string/please_enter_car_nub"/>


</com.zhy.autolayout.AutoLinearLayout>