<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ftoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/title_bg"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/sel_backbg"
                android:src="@drawable/ic_back"/>

            <View android:layout_marginLeft="@dimen/px15"
                android:layout_width="@dimen/px02"
                android:layout_height="match_parent"
                android:background="@color/white"/>

            <TextView android:id="@+id/tv_title"
                android:layout_marginLeft="@dimen/px15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="editext"
                android:textSize="@dimen/px40"/>

        </com.zhy.autolayout.AutoLinearLayout>
    </android.support.v7.widget.Toolbar>


    <EditText android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px80"
        android:layout_margin="@dimen/px20"
        android:background="@drawable/shape_border"
        android:hint="@string/please_enter_name"
        android:visibility="gone"
        android:padding="@dimen/px20"/>

    <EditText android:id="@+id/edt_id_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px80"
        android:layout_margin="@dimen/px20"
        android:background="@drawable/shape_border"
        android:hint="@string/please_enter_id_card"
        android:visibility="gone"
        android:padding="@dimen/px20"/>

    <EditText android:id="@+id/edt_company_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px80"
        android:layout_margin="@dimen/px20"
        android:background="@drawable/shape_border"
        android:hint="@string/please_enter_company_name"
        android:visibility="gone"
        android:padding="@dimen/px20"/>

    <EditText android:id="@+id/edt_company_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px80"
        android:layout_margin="@dimen/px20"
        android:background="@drawable/shape_border"
        android:hint="@string/please_enter_company_address"
        android:visibility="gone"
        android:padding="@dimen/px20"/>


    <EditText android:id="@+id/edt_position"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px80"
        android:layout_margin="@dimen/px20"
        android:background="@drawable/shape_border"
        android:hint="@string/please_enter_position"
        android:visibility="gone"
        android:padding="@dimen/px20"/>

</com.zhy.autolayout.AutoLinearLayout>